[package]
name = "aoc20"
version = "0.1.0"
authors = ["Goost91 <goost15@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc20"
path = "src/main.rs"
bench =false

[dependencies]
criterion = "0.3"
itertools = "0.9.0"


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "day01"
harness = false